@@ -3,7 +3,11 @@ package xin.vanilla.sakura.network.packet;
 import lombok.Getter;
 import net.minecraft.advancements.AdvancementHolder;
 import net.minecraft.network.FriendlyByteBuf;
-import net.neoforged.neoforge.network.NetworkEvent;
+import net.minecraft.network.protocol.common.custom.CustomPacketPayload;
+import net.minecraft.resources.ResourceLocation;
+import net.neoforged.neoforge.network.handling.IPayloadContext;
+import org.jetbrains.annotations.NotNull;
+import xin.vanilla.sakura.SakuraSignIn;
 import xin.vanilla.sakura.network.ClientProxy;
 import xin.vanilla.sakura.network.data.AdvancementData;
 import xin.vanilla.sakura.util.CollectionUtils;
@@ -11,10 +15,13 @@ import xin.vanilla.sakura.util.CollectionUtils;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Getter
-public class AdvancementPacket extends SplitPacket {
+public class AdvancementPacket extends SplitPacket implements CustomPacketPayload {
+    public final static ResourceLocation ID = new ResourceLocation(SakuraSignIn.MODID, "advancement");
+
     // 存储要传输的AdvancementData对象
     private final List<AdvancementData> advancements;
 
@@ -22,7 +29,7 @@ public class AdvancementPacket extends SplitPacket {
         super();
         this.advancements = advancements.stream()
                 .map(AdvancementData::fromAdvancement)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public AdvancementPacket(FriendlyByteBuf buf) {
@@ -41,23 +48,26 @@ public class AdvancementPacket extends SplitPacket {
         this.advancements.addAll(packets.stream().flatMap(packet -> packet.getAdvancements().stream()).toList());
     }
 
-    public static void handle(AdvancementPacket packet, NetworkEvent.ClientCustomPayloadEvent.Context ctx) {
-        // 获取网络事件上下文并排队执行工作
-        ctx.enqueueWork(() -> {
-            if (ctx.getDirection().getReceptionSide().isClient()) {
+    @Override
+    public @NotNull ResourceLocation id() {
+        return ID;
+    }
+
+    public static void handle(AdvancementPacket packet, IPayloadContext ctx) {
+        if (ctx.flow().isClientbound()) {
+            // 获取网络事件上下文并排队执行工作
+            ctx.workHandler().execute(() -> {
                 // 在客户端更新 List<AdvancementData>
                 List<AdvancementPacket> packets = SplitPacket.handle(packet);
                 if (CollectionUtils.isNotNullOrEmpty(packets)) {
                     ClientProxy.handleAdvancement(new AdvancementPacket(packets));
                 }
-            }
-        });
-        // 设置数据包已处理状态，防止重复处理
-        ctx.setPacketHandled(true);
+            });
+        }
     }
 
-    public void toBytes(FriendlyByteBuf buf) {
-        super.toBytes(buf);
+    public void write(@NotNull FriendlyByteBuf buf) {
+        super.write(buf);
         buf.writeVarInt(this.advancements.size());
         for (AdvancementData data : this.advancements) {
             data.writeToBuffer(buf);
